--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --sunset: #F0CEA0;
     --brown: #534D41;
 
-    --box-size: 900px;
+    --box-size: 1200px;
 
     --bg-color: var(--blue);
     --body-color: var(--sunset);
@@ -33,10 +33,12 @@ body {
 
 }
 
-header{
+/* Header Start */
+header {
     display: flex;
+    flex-direction: row;
+    gap: 10px;
     justify-content: space-around;
-    align-items: center;
     padding: 10px;
     background-color: var(--bg-color);
     color: var(--text-color);
@@ -44,6 +46,14 @@ header{
     margin: 0 auto;
     width: 100%;
 }
+header>h1 {
+    text-align: left;
+}
+
+header>h2 {
+    text-align: right;
+}
+
 .navbar {
     display: flex;
     max-width: 100%;
@@ -51,13 +61,13 @@ header{
     margin: 0 auto;
     justify-content: center;
     position: sticky;
-    top: 0;
+    top: 0px;
     border-bottom: 5px solid var(--border-color);
-    border-radius: 0 0 50px 50px;
-
+    border-radius: 0 0 30px 30px;
+    z-index: 1;
 }
 
-.navbar > nav > ul {
+.navbar>nav>ul {
     list-style: none;
     display: flex;
     align-items: center;
@@ -73,6 +83,7 @@ header{
     background-color: var(--btn-color);
     padding: 6px 12px;
     border-radius: 10px;
+    display: flex;
 
 }
 
@@ -80,3 +91,104 @@ header{
     color: var(--border-color);
     background-color: var(--body-color);
 }
+
+/* Header End */
+
+/* ABOUT ME START */
+
+.container {
+    max-width: var(--box-size);
+    margin: 10px auto;
+    padding: 0 20px;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    border: 2px solid var(--border-color);
+    border-radius: 10px;
+}
+
+.title {
+      text-align: center;
+      margin: 20px 0;
+      font-size: xx-large;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: flex-start;
+}
+
+.content>p {
+    font-weight: 200;
+    font-size: 1.3em;
+}
+
+.content>aside {
+    position: relative;
+    bottom: 30px;
+    z-index: 0;
+    
+}
+
+.content>aside>img {
+    max-width: 200px;
+    height: auto;
+    padding: 5px;
+    background-color: var(--body-color);
+    border: 2px solid var(--border-color);
+    border-radius: 10px;
+}
+
+
+@media (max-width: 768px) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+    .content>aside {
+        position: static;       
+    }
+}
+
+.link {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
+/* ABOUT ME END */
+
+/* LEARNING ROADMAP START*/
+
+details {
+    padding: 20px;
+    display: flex;
+}
+details>summary {
+    padding: 10px;
+}
+
+details>img {
+    width: 100%;
+    align-items: center;
+    padding: 5px;
+    background-color: var(--body-color);
+    border: 2px solid var(--border-color);
+    border-radius: 10px;
+}
+
+.lad {
+    display: inline-block;
+    width: 100%;
+}
+
+.lad>li,
+.lad>li>.drop-down>li {
+    padding: 10px;
+}
+
+/* LEARNING ROADMAP END*/
